Fixed up cards overflow

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ header .nav li a:hover {
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
-
 }
 
 .projects
@@ -104,7 +103,6 @@ header .nav li a:hover {
     background: #191E29;
     border: 1px;
     border-radius: 10px;
-    height: 35vh;
     cursor: pointer;
     transition: all 0.5s;
 }
@@ -121,11 +119,11 @@ header .nav li a:hover {
 }
 
 .projects .card .cuerpo-card{
-    display: flex;
     color: var(--color-texto);
     flex-direction: column;
-    margin: 10px;
     gap: 10px;
+    height: 100%;
+    margin: 10px;
     
 }
 
